.provarCaches/00D5f000005vwGkEAI/objects/rstk__bommassaddline__c.object
<CustomObject>
    <description>bommassaddline__c</description>
    <fields>
        <fullName>rstk__componentbom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component BOM</label>
        <referenceTo>rstk__pebom__c</referenceTo>
        <relationshipLabel>ZZ Bom Mass Add Lines</relationshipLabel>
        <relationshipName>ZZ_Bom_Mass_Add_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__componentitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component Item</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>ZZ Bom Mass Add Lines</relationshipLabel>
        <relationshipName>ZZ_Bom_Mass_Add_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__componentitem_autocomplete__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__deldate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Delete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__delrev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Eng Item Revision</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>ZZ Bom Mass Add Lines</relationshipLabel>
        <relationshipName>ZZ_Bom_Mass_Add_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__delsts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Delete Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__include__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__line__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__m_noninventoryauthorization__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Non-Inventory Authorization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_noninventoryrequisitions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Non-Inventory Requisitions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__qtyper__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Per</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__refdes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Reference Designators</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__scrappct__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Scrap Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__setupqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Setup Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>ZZ Bom Mass Add Line</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>ZZ Bom Mass Add Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZZ Bom Mass Add Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>